[tool.poetry]
name = "guacapy"
version = "1.20251013.0"
description = "A Python client for the Apache Guacamole REST API"
authors = ["Philipp Schmitt <philipp@schmitt.co>", "Dax Mickelson <github@daxm.net>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.5"  # HTTP request library

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"      # For static type checking
black = "^25.9.0"     # Code formatter
flake8 = "^7.1.0"     # Linter

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.flake8]
max-line-length = 120